# AnimationProg

./: .gitignore  README.md
AnimationProgProject/: AnimationProgProject.cpp  AnimationProgProject.h  CMakeLists.txt  CMakePresets.json  todo.txt
AnimationProgProject/Logger/: Logger.cpp  Logger.h
AnimationProgProject/Shaders/: basic.frag  basic.vert  changed.frag  changed.vert  gltf.frag  gltf.vert  gltf_gpu.vert  gltf_gpu_dquat.vert
AnimationProgProject/Window/: Window.cpp  Window.h
AnimationProgProject/camera/: Camera.cpp  Camera.h
AnimationProgProject/include/glad/: glad.h
AnimationProgProject/models/: GltfModel.cpp  GltfModel.h  Model.cpp  Model.h  ModelSettings.h
AnimationProgProject/models/animations/: GltfAnimationChannel.cpp  GltfAnimationChannel.h  GltfAnimationClip.cpp  GltfAnimationClip.h
AnimationProgProject/models/animations/IK/: IKSolver.cpp  IKSolver.h
AnimationProgProject/models/arrow/: ArrowModel.cpp  ArrowModel.h  CoordArrowsModel.cpp  CoordArrowsModel.h
AnimationProgProject/models/gltf/: GltfInstance.cpp  GltfInstance.h  GltfModel.cpp  GltfModel.h  GltfNode.cpp  GltfNode.h
AnimationProgProject/models/spline/: SplineModel.cpp  SplineModel.h
AnimationProgProject/opengl/Buffers/FrameBuffer/: FrameBuffer.cpp  FrameBuffer.h
AnimationProgProject/opengl/Buffers/VertexBuffer/: VertexBuffer.cpp  VertexBuffer.h
AnimationProgProject/opengl/MainRenderer/: OGLRenderData.h  OGLRenderer.cpp  OGLRenderer.h
AnimationProgProject/opengl/buffers/shaderStorageBuffer/: ShaderStorageBuffer.cpp  ShaderStorageBuffer.h
AnimationProgProject/opengl/buffers/textureBuffer/: TextureBuffer.cpp  TextureBuffer.h
AnimationProgProject/opengl/buffers/uniformBuffer/: UniformBuffer.cpp  UniformBuffer.h
AnimationProgProject/opengl/shaders/: Shader.cpp  Shader.h
AnimationProgProject/opengl/textures/: Texture.cpp  Texture.h
AnimationProgProject/src/: glad.c
AnimationProgProject/timer/: Timer.cpp  Timer.h
AnimationProgProject/userInterface/: UserInterface.cpp  UserInterface.h
AnimationProgProject/vulkan/Renderer/: VkRenderData.h  VkRenderer.cpp  VkRenderer.h
